<resources>
    <string name="app_name">ProjetoEco</string>
    <string name="botao_entrar">Entrar</string>
    <string name="link_cadastrar">Criar cadastro</string>
    <string name="link_esqueci_senha">Esqueci minha senha</string>
    <string name="text_cadastro">Cadastro</string>
    <string name="link_voltar">Voltar</string>
    <string name="botao_criar">Criar</string>
    <string name="botao_plantas">PLANTAS</string>
    <string name="botao_eco_espacos">ECO ESPAÇOS</string>
    <string name="botao_destaques">DESTAQUES</string>
    <string name="botao_atualizar_cadastro">ATUALIZAR CADASTRO</string>
    <string name="botao_sair">SAIR</string>
    <string name="descricao_plantas">Plantas disponíveis</string>
    <string name="pauBrasil">Pau-Brasil</string>
    <string name="angicoBranco">Angico-branco</string>
    <string name="ipeAmarelo">Ipê-Amarelo</string>
    <string name="eucalipto">Eucalipto</string>
    <string name="botao_associar">Associar</string>
    <string name="botao_cancelar_alarme">CANCELAR</string>
    <string name="botao_definir_alarme">LEMBRETE</string>
    <string name="botao_criar_alarme">CRIAR</string>
    <string name="link_definir_alarme">Definir alarme</string>
    <string name="text_alarme">ALARME</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="botao_Buscar">Buscar</string>

</resources>