<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo4"
    tools:context=".TelaPrincipal">

    <ImageView
        android:id="@+id/arvore_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/arvore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        style="@style/ContainerComponents"
        android:id="@+id/containerComponentsTelaPrincipal"
        android:layout_height="415dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arvore_logo"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BotaoEntrarCriar"
        android:id="@+id/botaoPlantas"
        android:text="@string/botao_plantas"
        app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintTop_toTopOf="@id/containerComponentsTelaPrincipal"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BotaoEntrarCriar"
        android:id="@+id/botaoEcoEspaco"
        android:text="@string/botao_eco_espacos"
        app:layout_constraintTop_toBottomOf="@id/botaoPlantas"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BotaoEntrarCriar"
        android:id="@+id/botaoDestaques"
        android:text="@string/botao_destaques"
        app:layout_constraintTop_toBottomOf="@id/botaoEcoEspaco"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BotaoEntrarCriar"
        android:id="@+id/botaoAtualizarCadastro"
        android:text="@string/botao_atualizar_cadastro"
        app:layout_constraintTop_toBottomOf="@id/botaoDestaques"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BotaoSair"
        android:id="@+id/botaoSair"
        android:text="@string/botao_sair"
        app:layout_constraintTop_toBottomOf="@id/botaoAtualizarCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
        app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
        />




</androidx.constraintlayout.widget.ConstraintLayout>